# iota2

./: .gitignore  .gitignore.swp  AddFieldArea.py  AreaPolyinPoly.py  BufferOgr.py  CMakeLists.txt  Capteurs.py  ChangeNameField.py  ClassificationN.py  ClassificationN.py~  ClassificationShaping.py  ClassificationY.py  ConditionalFieldRecode.py  ConfigChaineSat.cfg  ConfigClassifN.py  ConfigClassifN.py~  CreateDateFile.py  CreateIndexedColorImage.py  DataProcessing.py  DataProcessing.py~  DataProcessing_sauv.py  Dico.py  Dico.py~  DifferenceQGIS.py  GenSensors.py  LandsatData.py  LandsatData.py~  LandsatDataN.py  LandsatProcessing.py  LandsatProcessing.py~  LaunchTraining.py  Log.py  ModelStat.py  New_DataProcessing.py  New_ProcessingChain.py  PrepareSamples.py  ProcessingChain.py  ProcessingChain.py~  ProcessingChainL8.py  ProcessingChainNationalByTile.py  (+47 more)
Publishing/: publishing.cfg  publishing.cfg~
Publishing/Code/: codeStrings.py  figureClassification.py  generateHTML.py  resultat_2009.js  resultat_2010.js  resultat_2011.js
Publishing/DATAs/: FR_ALLCLASSES.qml  classes_2009.cfg  classes_2009.cfg~  classes_2010.cfg  classes_2010.cfg~  classes_2011.cfg  classes_2016.cfg  resultat_2009.txt  resultat_2010.txt  resultat_2011.txt  resultat_2016.txt  resultat_2016_avecCorse.txt
Publishing/Example/: layer.css  layer.html  layer.js  resultat_2009.js  resultat_2010.js  resultat_2011.js
app/: CMakeLists.txt  extractSortedIndices.cxx  iota2FeatureExtraction.cxx  iota2GapFillingFeatureExtraction.cxx  iota2MasksIntersection.cxx
config/: ConfigChain_20130205.cfg  ConfigChain_Comp4Tiles.cfg  ConfigChaine_France2014_10MV1.cfg  Config_1tile.cfg  Config_4Tuiles_Multi_FUS_Confidence.cfg  SARconfig.cfg  resources.cfg  sensors.cfg
data/: 4Tiles.txt  ConfigDummyParallel.cfg  Config_4Tiles_L8.cfg  OnlyIndices.tif  dim_red_samples.sqlite  dim_red_stats.xml  joint.sqlite  model.pca  reduced.sqlite  reduced_output_samples.sqlite
data/config/: prevClassif.cfg  test_config.cfg  test_config_bindings.cfg  test_config_bindings_uDateFeatures.cfg  test_config_classifCropMix.cfg  test_config_classifCropMix_bindings.cfg  test_config_coregister.cfg  test_config_cropMix.cfg  test_config_cropMix_bindings.cfg  test_config_iota2FeatureExtraction.cfg  test_config_serviceConfigFile.cfg  test_config_serviceConfigFileBad1.cfg  test_config_serviceConfigFileBad2.cfg  test_config_serviceConfigFileBad3.cfg
data/config_test/: test_4Tiles_seq_L8_Fusion.cfg  test_4Tiles_seq_L8_Fusion.cfg~
data/references/: D5H2_groundTruth_samples.dbf  D5H2_groundTruth_samples.shp  D5H2_groundTruth_samples.shx  dataAugmentation.csv  dates.txt  fakedates.txt  iota2tests_features_labels_test_Basic.txt  opt_confusion.csv  region_need_To_env.dbf  region_need_To_env.shp  region_need_To_env.shx  sampleAugmentation.csv  sar_confusion.csv  typo.dbf  typo.shp  typo.shx
data/res_region_ref/: regionTestL5.shp  regionTestL5.shx  regionTestL8.dbf
data/test_scripts/: test_genGrid.py
doc/: README.md  TemRes_20130419-20131205-16days.txt  colorFile.txt  run_chain_test.sh  running_iota.org
doc/source/: HowToGetIOTA2.rst  IOTA2_Example.rst  IOTA2_parameters.rst  SAR_Opt_postClassif_fusion.rst  conf.py  develop_reco.rst  index.rst  sampleAugmentation_explain.rst
include/: extractSortedIndices.h  iota2FeatureExtraction.h
pbs/: OSO_chain.sh  genCmdConf.pbs  genCmdFeatures.pbs  genCmdStats.pbs  genCmdTrain.pbs  genJobExtractData.pbs  genJobLaunchConfusion.pbs  genJobLaunchFeat.pbs  genJobLaunchStat.pbs  regionsByTiles.pbs
scripts/: Cluster.py  Iota2.py  Iota2Builder.py  Iota2Cluster.py
scripts/Classification/: ClassificationCmd.py  Fusion.py  ImageClassifier.py  MergeFinalClassifications.py  NoData.py
scripts/Common/: FileUtils.py  GenerateFeatures.py  IOTA2Directory.py  OtbAppBank.py  ServiceConfigFile.py  ServiceError.py  ServiceLogger.py  Utils.py
scripts/Learning/: GetModel.py  ModelStat.py  TrainingCmd.py
scripts/MPI/: iota2_HPC_ressources_request.cfg  launch_tasks.py
scripts/Sampling/: DataAugmentation.py  DimensionalityReduction.py  GenAnnualSamples.py  SamplesMerge.py  SamplesSelection.py  SplitInSubSets.py  SplitSamples.py  TileArea.py  TileEnvelope.py  VectorFormatting.py  VectorSampler.py  VectorSamplesMerge.py
scripts/Sensors/: GenSensors.py  Landsat_8.py  NbView.py  ProcessLauncher.py  Sensors.py  Sensors_container.py  Sentinel_1.py  Sentinel_2.py  Sentinel_2_L3A.py  Sentinel_2_S2C.py  TimeSeriesStacks.py
scripts/Validation/: ClassificationShaping.py  ConfusionFusion.py  GenConfusionMatrix.py  GenResults.py  PlotCor.py  ResultsUtils.py
scripts/VectorTools/: AddFieldArea.py  AddFieldID.py  AddFieldPerimeter.py  ChangeNameField.py  ComputeZoneStats.py  ConditionalFieldRecode.py  CountNbPolByAtt.py  CountNbPolByAtt_MPI.py  CountPolyinPoly.py  DeleteDuplicateGeometries.py  DeleteDuplicateGeometriesSqlite.py  FileByClass.py  ForestDiff.py  MergeFiles.py  NomenclatureHarmonisation.py  Pol_in_Pixels.py  PrepareSamples.py  PrepareSamplesRegion.py  RandomSelectionPolygonsAreaThreshold.py  SimplifyPoly.py  config_2A.cfg  config_2B.cfg  join_sqlites.py  shapeDifference.py  spatialOperations.py  splitByArea.py  vector_functions.py
scripts/common/: BufferOgr.py  ClassificationN.py  ClassificationShaping.py  Cluster.py  CommonMasks.e2569091.26  CommonMasks.o2569091.0  CommonMasks.o2569091.1  CommonMasks.o2569091.10  CommonMasks.o2569091.11  CommonMasks.o2569091.12  CommonMasks.o2569091.13  CommonMasks.o2569091.14  CommonMasks.o2569091.15  CommonMasks.o2569091.16  CommonMasks.o2569091.17  CommonMasks.o2569091.18  CommonMasks.o2569091.19  CommonMasks.o2569091.2  CommonMasks.o2569091.20  CommonMasks.o2569091.21  CommonMasks.o2569091.22  CommonMasks.o2569091.23  CommonMasks.o2569091.24  CommonMasks.o2569091.25  CommonMasks.o2569091.26  CommonMasks.o2569091.27  CommonMasks.o2569091.28  CommonMasks.o2569091.29  CommonMasks.o2569091.3  (+188 more)
sh/: PyDepInstall.sh  prepare_env.sh
test/: CMakeLists.txt  extractSortedIndicesTest.cxx  functor.cxx  iota2ConnectGapFex.cxx  iota2FeatureExtractionFunctor.cxx  iota2FeatureExtractionTests.cxx
(+481 files in other folders)
